--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Creative Computing Drawings</title>
+		<title>Eyeball Project</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Creative Computing Drawings</h1>
+			<h1>Eyeball Project:</h1>
 		</header>
 			<section id="content">
 				<canvas id="eyeball" data-processing-sources="eyeball.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Creative Computing Drawings
+		    Eyeball Project: 
 	    </footer>
 	</body>
 </html>
